created nav and handle bars for mobile version

--- a/index.html
+++ b/index.html
@@ -12,15 +12,16 @@
 </head>
 
 <body>
-    <nav class="nav">
+    <nav class="nav" id="nav">
         <ul class="nav__list">
             <li class="nav__element"><a class="nav__link nav__link--active" href="#">Home</a></li>
             <li class="nav__element"><a class="nav__link" href="/sideSites/about.html">About</a></li>
             <li class="nav__element"><a class="nav__link" href="/sideSites//contact.html">Contact</a></li>
         </ul>
     </nav>
+    <button class="bars" id="bars"></button>
 
-    <script src="/js/main.js"></script>
+    <script type="module" src="/js/main.js"></script>
 </body>
 
 </html>
