--- a/sideSites/about.html
+++ b/sideSites/about.html
@@ -12,13 +12,14 @@
 </head>
 
 <body>
-    <nav class="nav">
+    <nav class="nav" id="nav">
         <ul class="nav__list">
             <li class="nav__element"><a class="nav__link" href="/index.html">Home</a></li>
             <li class="nav__element"><a class="nav__link nav__link--active" href="#">About</a></li>
             <li class="nav__element"><a class="nav__link" href="/sideSites/contact.html">Contact</a></li>
         </ul>
     </nav>
+    <button class="bars" id="bars"></button>
 
     <script src="/js/main.js"></script>
 </body>
