--- a/sideSites/about.html
+++ b/sideSites/about.html
@@ -21,7 +21,7 @@
     </nav>
     <button class="bars" id="bars"></button>
 
-    <script src="/js/main.js"></script>
+    <script type="module" src="/js/main.js"></script>
 </body>
 
 </html>
