Created service section

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <li class="nav__element"><a class="nav__link nav__link--active" href="#header">Home</a></li>
             <li class="nav__element"><a class="nav__link" href="#about">About</a></li>
             <li class="nav__element"><a class="nav__link" href="#service">Service</a></li>
+            <li class="nav__element"><a class="nav__link" href="#portfolio">Portfolio</a></li>
             <li class="nav__element"><a class="nav__link" href="#contact">Contact</a></li>
         </ul>
     </nav>
@@ -39,7 +40,7 @@
     <main>
         <section class="about" id="about">
             <div class="about__container">
-                <h2 class="about__header">Lorem ipsum dolor sit!</h2>
+                <h2 class="section__header">Lorem ipsum dolor sit!</h2>
                 <p class="about__content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur doloremque
                     non veritatis ipsum tempora enim dolor cum quam? Repellat, eos et? Minus quas exercitationem
                     molestiae cumque labore asperiores perferendis molestias.</p>
@@ -49,28 +50,28 @@
 
         <section class="service section" id="service">
             <div class="service__container">
-                <h2 class="service__header">Our service:</h2>
+                <h2 class="section__header">Our service:</h2>
                 <div class="service__kinds-of-service">
                     <div class="service__kind">
                         <p class="service__icon fas fa-code"></p>
-                        <p class="serivce__name">Service nr.1</p>
+                        <p class="service__name">Service nr.1</p>
                         <p class="service__description">Lorem, ipsum dolor sit amet consectetur adipisicing elit.
                             Beatae, cum!</p>
                     </div>
                     <div class="service__kind">
                         <p class="service__icon fab fa-react"></p>
-                        <p class="serivce__name">Service nr. 2</p>
+                        <p class="service__name">Service nr. 2</p>
                         <p class="service__description">Lorem ipsum dolor sit amet consectetur adipisicing.</p>
                     </div>
                     <div class="service__kind">
                         <p class="service__icon fas fa-code-branch"></p>
-                        <p class="serivce__name">Service nr. 3</p>
+                        <p class="service__name">Service nr. 3</p>
                         <p class="service__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab,
                             dolorum aut?</p>
                     </div>
                     <div class="service__kind">
                         <p class="service__icon fas fa-globe-africa"></p>
-                        <p class="serivce__name">Service nr. 4</p>
+                        <p class="service__name">Service nr. 4</p>
                         <p class="service__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                     </div>
                 </div>
