Change background image and created portfolio section

--- a/index.html
+++ b/index.html
@@ -77,6 +77,41 @@
                 </div>
             </div>
         </section>
+
+        <section class="portfolio" id="portfolio">
+            <div class="portfolio__container">
+                <div class="project project__first">
+                    <div class="project__name">
+                        <p>Project 1</p>
+                    </div>
+                </div>
+                <div class="project project__second">
+                    <div class="project__name">
+                        <p>Project 2</p>
+                    </div>
+                </div>
+                <div class="project project__third">
+                    <div class="project__name">
+                        <p>Project 3</p>
+                    </div>
+                </div>
+                <div class="project project__fourth">
+                    <div class="project__name">
+                        <p>Project 4</p>
+                    </div>
+                </div>
+                <div class="project project__fifth">
+                    <div class="project__name">
+                        <p>Project 5</p>
+                    </div>
+                </div>
+                <div class="project project__sixth">
+                    <div class="project__name">
+                        <p>Project 6</p>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
     <script type="module" src="/js/main.js"></script>
