created contact form and section

--- a/index.html
+++ b/index.html
@@ -112,7 +112,36 @@
                 </div>
             </div>
         </section>
+
+        <section class="contact section" id="contact">
+            <h2 class="section__header">Contact</h2>
+            <div class="contact__container">
+                <form action="" class="contact-form">
+                    <label>
+                        <p class="contact-form__label-text">Name:</p>
+                        <input class="contact-form__input" type="text">
+                    </label>
+                    <label>
+                        <p class="contact-form__label-text">e-mail:</p>
+                        <input class="contact-form__input" type="email">
+                    </label>
+                    <label>
+                        <p class="contact-form__label-text">Subject:</p>
+                        <input class="contact-form__input" type="text">
+                    </label>
+                    <div>
+                        <p class="contact-form__label-text">Message:</p>
+                        <textarea class="contact-form__textarea" name="" id="" cols="30" rows="10"></textarea>
+                    </div>
+                    <button class="button contact-form__button">Send</button>
+                </form>
+            </div>
+        </section>
     </main>
+
+    <footer class="footer">
+        <p>footer</p>
+    </footer>
 
     <script type="module" src="/js/main.js"></script>
 </body>
