--- a/index.html
+++ b/index.html
@@ -137,6 +137,12 @@
                 </form>
             </div>
         </section>
+
+        <section class="map">
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d22351.02700500524!2d27.524546427013675!3d53.92530680067586!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46dbcf92d0d196ab%3A0x264e2671b6afeb29!2sGalleria%20Minsk!5e0!3m2!1spl!2spl!4v1618774511873!5m2!1spl!2spl"
+                style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        </section>
     </main>
 
     <footer class="footer">
