--- a/index.html
+++ b/index.html
@@ -16,14 +16,15 @@
 <body>
     <nav class="nav" id="nav">
         <ul class="nav__list">
-            <li class="nav__element"><a class="nav__link nav__link--active" href="#header">Home</a></li>
+            <li class="nav__element"><a class="nav__link" href="#header">Home</a></li>
             <li class="nav__element"><a class="nav__link" href="#about">About</a></li>
             <li class="nav__element"><a class="nav__link" href="#service">Service</a></li>
             <li class="nav__element"><a class="nav__link" href="#portfolio">Portfolio</a></li>
             <li class="nav__element"><a class="nav__link" href="#contact">Contact</a></li>
         </ul>
     </nav>
-    <button class="bars" id="bars"></button>
+
+    <div class="bars-container"> <button class="bars" id="bars"></button></div>
 
     <header class="header" id="header">
         <div class="header__img">
